# omega-sdk-python

./: .env.example  .gitignore  CHANGELOG.md  OMEGA_SDK_V1_COMPLETION_SUMMARY.md  PROGRESS.md  README.md  SEALING_CHECKLIST.md  TEAM_FOXTROT_IMPLEMENTATION_PLAN.md  pyproject.toml
.claude/: settings.local.json
docs/: CHANGELOG.md  CORRELATION.md  KEON_INTEGRATION_SEAMS.md  OMEGA_SDK_AGENT_ASSIGNMENT_V2.md  OMEGA_SDK_DIRECTIVE_V2.md  OMEGA_SDK_HANDOFF_V2.md  OMEGA_SDK_QUICK_REFERENCE.md  OMEGA_SDK_V1_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  TS_SDK_PLAN.md  WHITEPAPER.md  WORKFLOW_CONTRACT_VERSION.md
docs/canon/: LPE.md
examples/: hello_world.py  invoke_tool.py  list_tools.py  spawn_task.py
examples/config/: .env.keon.example  keon_omega.yaml
src/omega_sdk/: __init__.py  client.py  config.py  errors.py  evidence.py  federation.py  federation_client.py  models.py  workflows.py
src/omega_sdk/utils/: __init__.py  correlation.py  retry.py
tests/: __init__.py  test_correlation.py  test_errors.py  test_evidence.py  test_workflows.py
tests/chaos/: __init__.py  stub_server.py  test_integration.py
